Breaking - Tidying dependencies (#13)
* Gradle upgrade to 7.0
Removing Bintray from this for now as publishing to jcenter no longer works
Removed findbugs as that's not longer supported, replaced with spotbugs

* Upgrading jackson version

* changing travis-ci to use jdk 11

* CVE Work
Removing commons-io from dependencies, easier to use the Java 9 feature of reading bytes from an inputstream.
Also upgrading fastjson to latest version.

* Breaking - Traverson4j will now be built for java 11
Upgraded checkstyle tool version
Added dependencycheck plugin to detect CVE issues