@@ -1,7 +1,5 @@
 package uk.co.autotrader.traverson.conversion;
 
-
-import org.apache.commons.io.IOUtils;
 import uk.co.autotrader.traverson.exception.ConversionException;
 
 import java.io.IOException;
@@ -18,7 +16,7 @@ class StringResourceConverter implements ResourceConverter<String> {
     @Override
     public String convert(InputStream resource, Class<? extends String> returnType) {
         try (InputStream streamToProcess = resource) {
-            return IOUtils.toString(streamToProcess, StandardCharsets.UTF_8);
+            return new String(streamToProcess.readAllBytes(), StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new ConversionException("Failed to convert the input stream to a string", null, e);
         }
